CHATS_SIT/force-app/main/default/objects/Tax_Intercept__c.object
<CustomObject>
    <description>OEC Project 282 - JIRA CCCAP-3890. The Colorado Child Care Assistance Program under statute, has the ability to intercept state income tax refunds for any individual or entity who owes a recovery for benefits for which they were not eligible.</description>
    <fields>
        <fullName>Adjustment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adjustment ID</label>
        <referenceTo>T_ADJMT__c</referenceTo>
        <relationshipLabel>Tax Intercepts</relationshipLabel>
        <relationshipName>Tax_Intercepts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Due__c</fullName>
        <label>Original Recovery Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>CDOR_RECORD_TYPE__c</fullName>
        <description>This field will be used to convey to Java that a Tax Intercept record needs to be added for CDOR.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CDOR RECORD TYPE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Name_Number__c</fullName>
        <description>Used for sorting purpose in Tax Intercept search screen</description>
        <formula>VALUE(Case__r.Name)</formula>
        <label>Case Name (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00357</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case ID</label>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Tax Intercepts</relationshipLabel>
        <relationshipName>Tax_Intercepts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00730</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>County_Name_Text__c</fullName>
        <description>Used for sorting purpose in Tax Intercept search screen</description>
        <formula>County__r.Name</formula>
        <label>County Name (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>County</label>
        <referenceTo>T_COUNTY__c</referenceTo>
        <relationshipLabel>Tax Intercepts</relationshipLabel>
        <relationshipName>Tax_Intercepts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Balance__c</fullName>
        <label>Outstanding Recovery Balance</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DTE_DOB__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FEIN__c</fullName>
        <formula>Provider__r.NBR_FEIN__c</formula>
        <label>FEIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>INTERCEPT_PROCESSED_KEY__c</fullName>
        <description>Unique key for the intercept that was processed, assigned by MIR</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Unique key for the intercept that was processed, assigned by MIR</inlineHelpText>
        <label>Intercept Processed Key</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intercept_Status__c</fullName>
        <formula>IF(
(OR((YEAR(TODAY())==(VALUE(Tax_Year__c))),((YEAR(TODAY())-1) == VALUE(Tax_Year__c)))), IF(
NOT(ISBLANK(TEXT(Remove_Reason__c))), &quot;Removed&quot;,
IF(
ISPICKVAL(Reinstate__c, &quot;Y&quot;), &quot;Reinstated&quot;,
&quot;Active&quot;
)
), &quot;Expired&quot;)</formula>
        <label>Intercept Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Amount__c</fullName>
        <label>Last Payment Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Status__c</fullName>
        <formula>TEXT(Provider__r.CDE_STATUS_PROVR__c)</formula>
        <label>License Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_FIRST__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_LAST__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_MI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Name_Number__c</fullName>
        <description>Used for sorting purpose in Tax Intercept search screen</description>
        <formula>VALUE(Provider__r.Name)</formula>
        <label>Provider Name (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider ID</label>
        <referenceTo>T_CHATS_PROVR_STATUS__c</referenceTo>
        <relationshipLabel>Tax Intercepts</relationshipLabel>
        <relationshipName>Tax_Intercepts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recovery_Reason__c</fullName>
        <label>Recovery Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00741</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reinstate_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reinstated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reinstate__c</fullName>
        <label>Reinstated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_YES_NO</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remove_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Removal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remove_Reason_Text__c</fullName>
        <formula>CASE(TEXT(Remove_Reason__c),
  &quot;1&quot;, &quot;Established payment plan&quot;,
  &quot;2&quot;, &quot;Recovery entered in error&quot;,
  &quot;3&quot;, &quot;Client has appealed intercept&quot;,
  &quot;4&quot;, &quot;Paid in full&quot;,
  &quot;5&quot;, &quot;Payment received&quot;,
  &quot;-- None --&quot;
)</formula>
        <label>Remove Reason (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remove_Reason__c</fullName>
        <label>Removal Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3</fullName>
                    <label>Client has appealed intercept</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Established payment plan</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Paid in full</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Payment received</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Recovery entered in error</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SEND_UPDATE_TO_CDOR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Update To CDOR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SSN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_to_CDOR__c</fullName>
        <label>Sent to CDOR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_YES_NO</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Year__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <label>Tax Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responsible_Party_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Responsible Party Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Tax Intercept</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tax_Year__c</columns>
        <columns>County__c</columns>
        <columns>Adjustment__c</columns>
        <columns>Case__c</columns>
        <columns>Provider__c</columns>
        <columns>Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>This_Year</fullName>
        <columns>NAME</columns>
        <columns>Tax_Year__c</columns>
        <columns>County__c</columns>
        <columns>Adjustment__c</columns>
        <columns>Case__c</columns>
        <columns>Provider__c</columns>
        <columns>Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>This Year</label>
    </listViews>
    <nameField>
        <displayFormat>TI{YYYY}{MM}{DD}{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Intercepts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
	<validationRules>
        <fullName>Check_for_Expired_Status</fullName>
        <active>true</active>
        <description>If Status of the Intercept Record is &quot;Expired&quot; then do not allow any updates on the record.</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; Intercept_Status__c = &apos;Expired&apos;</errorConditionFormula>
        <errorMessage>This Tax Intercept Record is &quot;Expired&quot; and can not be updated.</errorMessage>
    </validationRules>
</CustomObject>