CHATS_SIT/force-app/main/default/objects/Tax_Intercept__c/validationRules/Check_for_Expired_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_Expired_Status</fullName>
    <active>true</active>
    <description>If Status of the Intercept Record is &quot;Expired&quot; then do not allow any updates on the record.</description>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; Intercept_Status__c = &apos;Expired&apos;</errorConditionFormula>
    <errorMessage>This Tax Intercept Record is &quot;Expired&quot; and can not be updated.</errorMessage>
</ValidationRule>