CHATS_SIT/force-app/main/default/objects/Tax_Intercept__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tax_Year__c</columns>
    <columns>County__c</columns>
    <columns>Adjustment__c</columns>
    <columns>Case__c</columns>
    <columns>Provider__c</columns>
    <columns>Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>TI20250901006160</value>
    </filters>
    <label>All</label>
</ListView>