CHATS_SIT/force-app/main/default/objects/Tax_Intercept__c/listViews/Copy_of_B_Filter.listView-meta.xml
<ListView>
    <fullName>Copy_of_B_Filter</fullName>
    <columns>NAME</columns>
    <columns>Adjustment__c</columns>
    <columns>Case__c</columns>
    <columns>County_Name_Text__c</columns>
    <columns>Name__c</columns>
    <columns>Amount_Due__c</columns>
    <columns>Current_Balance__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Tax_Year__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>TI20240901005537</value>
    </filters>
    <label>CDOR Overpayment</label>
</ListView>