CHATS_SIT/force-app/main/default/objects/Tax_Intercept__c/listViews/Test_Filter.listView-meta.xml
<ListView>
    <fullName>Test_Filter</fullName>
    <columns>NAME</columns>
    <columns>Adjustment__c</columns>
    <columns>Intercept_Status__c</columns>
    <columns>Reinstate__c</columns>
    <columns>Reinstate_Date__c</columns>
    <columns>Remove_Reason__c</columns>
    <columns>Remove_Date__c</columns>
    <columns>Remove_Reason_Text__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>TI20240901004460</value>
    </filters>
    <filters>
        <field>Tax_Year__c</field>
        <operation>equals</operation>
        <value>2024</value>
    </filters>
    <label>Test Filter</label>
</ListView>