CHATS_SIT/force-app/main/default/objects/Tax_Intercept__c/listViews/This_Year.listView-meta.xml
<ListView>
    <fullName>This_Year</fullName>
    <columns>NAME</columns>
    <columns>Tax_Year__c</columns>
    <columns>County__c</columns>
    <columns>Adjustment__c</columns>
    <columns>Case__c</columns>
    <columns>Provider__c</columns>
    <columns>Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>This Year</label>
</ListView>