CHATS_SIT/force-app/main/default/objects/Tax_Intercept__c/listViews/Ticket_19342.listView-meta.xml
<ListView>
    <fullName>Ticket_19342</fullName>
    <columns>NAME</columns>
    <columns>Tax_Year__c</columns>
    <columns>County__c</columns>
    <columns>Current_Balance__c</columns>
    <columns>Adjustment__c</columns>
    <columns>Case__c</columns>
    <columns>Provider__c</columns>
    <columns>Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case__c</field>
        <operation>equals</operation>
        <value>71011363</value>
    </filters>
    <label>Ticket 19342</label>
    <sharedTo>
        <group>CHATS_Develoepr</group>
    </sharedTo>
</ListView>